--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="People planning in a meeting" /img>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
