restructured content section and made corresponding updates to css file

--- a/index.html
+++ b/index.html
@@ -30,32 +30,33 @@
         </nav>
     </header>
 
-    <!-- hero/jumbotron -->
+    <!-- hero image -->
     <section class="hero"></section>
     <!-- end of hero -->    
     
-    <section class="content">
-        <article id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook page with the letters SEO written in a cloud with Content, Headings, Mobile Compatibility, Social Media, Link Building, and Backlink branches/subheadings."/>
-            <div>
+    <!-- main content section -->
+    <section id="content" class="content">
+        <article id="search-engine-optimization" class="topic">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook page with the letters SEO written in a cloud with Content, Headings, Mobile Compatibility, Social Media, Link Building, and Backlink branches/subheadings."  class="float-left" />
+            <div class="topic-text ">
                 <h2>Search Engine Optimization</h2>
                 <p>
                   The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </div>
         </article>
-        <article id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Person at desk viewing screen of laptop that shows a powerpoint slide page labeled REPUTATION." />
-            <div>
+        <article id="online-reputation-management" class="topic">            
+            <img src="./assets/images/online-reputation-management.jpg" alt="Person at desk viewing screen of laptop that shows a powerpoint slide page labeled REPUTATION." class="float-right" />
+            <div class="topic-text">
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
-            </div>
+            </div>           
         </article>
-        <article id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="Six people setting at a conference table, two have tablets and one has laptop. Topic of discussion relates to social media and LIKEs, TWEETs, SHAREs, and MEDIA"/>
-            <div>
+        <article id="social-media-marketing" class="topic">
+            <img src="./assets/images/social-media-marketing.jpg" alt="Six people setting at a conference table, two have tablets and one has laptop. Topic of discussion relates to social media and LIKEs, TWEETs, SHAREs, and MEDIA"  class="float-left" />
+            <div class="topic-text">
               <h2>Social Media Marketing</h2>
               <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -64,7 +65,7 @@
         </article>
     </section>
 
-<div class="benefits">
+<section id="benefits" class="benefits">
     <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" />
