restructured footer and made corresponding updates to css file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <!-- navigation -->
     <header>
         <h1>
-            <a href="/">
-                Hori<span class="seo">seo</span>n
-            </a>
+            Hori<span class="seo">seo</span>n
         </h1>
         <nav>            
             <ul>                
@@ -100,12 +98,14 @@
         </div>
     </article>
 </section>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+
+
+<footer>
+    <h2>Made with ❤️️ by Horiseon</h2>
+    <p>
+        &copy; 2019 Horiseon Social Solution Services, Inc.
+    </p>
+</div>
 </body>
 
 </html>
