--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </h3>
 
             <article class="benefit">        
-                <img src="./assets/images/lead-generation.png" />        
+                <img src="./assets/images/lead-generation.png" alt="Icon with gear on top of funnel, down arrow on funnel leading to small filled circle containing dollar sign symbol." />
                 <div class="benefit-text">
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -95,7 +95,7 @@
             </h3>
 
             <article class="benefit">        
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="Icon with light bulb radiating visibility above suit jacket with tie." />
                 <div class="benefit-text">
                     <p>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -109,7 +109,7 @@
             </h3>
 
             <article class="benefit">
-                <img src="./assets/images/cost-management.png"></img>
+                <img src="./assets/images/cost-management.png" alt="Gear icon with two small filled circles containing a dollar sign symbol and one larger unfilled circle with dollar sign symbol." ></img>
                 <div class="benefit-text">
                     <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
